--- a/_config.yml
+++ b/_config.yml
@@ -53,4 +53,8 @@ kramdown:
   input: GFM # Enable GitHub Flavored Markdown (fenced code blocks)
   hard_wrap: true
 
+
+timezone: Asia/Seoul
+
+
 exclude: ['README.md', 'LICENSE']
